# OctaWave-KMP

./: .gitmodules  settings.gradle.kts
.fleet/: receipt.json
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/cpp/: AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  native-lib.cpp
composeApp/src/androidMain/kotlin/com/khyzhun/octawavekmp/: AudioProcessor.kt  AudioRecorder.kt  MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/appleMain/kotlin/com/khyzhun/octawavekmp/: AudioProcessor.apple.kt  AudioRecorder.apple.kt
composeApp/src/commonMain/kotlin/com/khyzhun/octawavekmp/: AppUi.kt  AudioProcessor.kt  AudioRecorder.kt  AudioScreen.kt  AudioViewModel.kt  Greeting.kt  Platform.kt
composeApp/src/iosMain/kotlin/com/khyzhun/octawavekmp/: MainViewController.kt  Platform.ios.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
